--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -13,7 +13,7 @@
     composes: text-sm from global;
     composes: text-subtle from global;
     composes: w-full from global;
-  
+    /* display: flex; */
     
     
 }
@@ -30,8 +30,8 @@
     composes: lg_gap-x-sm from global;
     composes: lg_gap-y-md from global;
     composes: lg_grid-cols-12 from global;
-    display: flex;
-  
+    
+   
   
     
 }
@@ -43,6 +43,7 @@
     composes: grid from global;
 
     composes: xs_col-span-2 from global;
+    /* display: flex; */
  
    
 }
@@ -52,6 +53,7 @@
     composes: first_font-semibold from global;
     color: rgb(46, 25, 234);
     cursor: pointer;
+    
 }
 
 .callout {
