--- a/src/components/CartPage/cartPage.module.css
+++ b/src/components/CartPage/cartPage.module.css
@@ -23,6 +23,8 @@
     composes: grid from global;
     composes: mb-xs from global;
     color: brown;
+    font-weight: bold;
+    font-size: 40px;
     
 }
 
